--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,7 @@
-version: '3.8'
 services:
   web:
     build: .
     ports:
       - "5000:5000"
-    volumes:
-      - .:/app  
+  redis:
+    image: "redis:alpine"
