--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   web:
-    build: .
+    image: "luc004/mini-project:latest" # On utilise l'image du Cloud !
     ports:
       - "5000:5000"
   redis:
