--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,10 @@ services:
     ports:
       - "5000:5000"
     environment:
-      - APP_TITLE=Securisation du site
+     environment:
+      - REDIS_PASSWORD=${REDIS_PASSWORD}
+      - APP_TITLE=${APP_TITLE}
       - REDIS_HOST=redis
-      - REDIS_PASSWORD=mon_mot_de_passe_secret
       - PYTHONUNBUFFERED=1
   redis:
     image: "redis:alpine"
