--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,14 +4,14 @@ services:
     ports:
       - "5000:5000"
     environment:
-      - REDIS_PASSWORD=${REDIS_PASSWORD}
-      - APP_TITLE=${APP_TITLE}
+      - REDIS_PASSWORD=1234
       - REDIS_HOST=redis
       - PYTHONUNBUFFERED=1
   redis:
     image: "redis:alpine"
-    command: redis-server --requirepass ${REDIS_PASSWORD}
-      - redis_data:/data  # On branche le disque dur virtuel ici
+    command: 
+    - redis-server --requirepass 1234
+    - redis_data:/data  # On branche le disque dur virtuel ici
 
 volumes:
   redis_data:             # On déclare le volume
