--- a/.github/workflows/security_scan.yml
+++ b/.github/workflows/security_scan.yml
@@ -17,15 +17,23 @@ jobs:
       - name: Lancer l'Analyse de Sécurité
         run: |
           python -c "
-          from scanner import VulnerabilityScanner
-          s = VulnerabilityScanner()
-          # On lit le fichier app.py que tu viens de pusher
-          code = open('app.py').read()
-          result = s.scan(code)
-          print(f'Verdict: {result}')
-          
-          # Si le résultat contient autre chose que SÉCURISÉ, on bloque tout
-          if 'SÉCURISÉ' not in result:
-              print('--- ALERTE ROUGE : FAILLE DÉTECTÉE ! ---')
+          try:
+              from scanner import VulnerabilityScanner
+              s = VulnerabilityScanner()
+              # Analyse du fichier principal
+              with open('app.py', 'r', encoding='utf-8') as f:
+                  code = f.read()
+              
+              result = s.scan(code)
+              print(f'Verdict: {result}')
+              
+              # Logique binaire : Si on détecte une 'Alerte', on bloque
+              if 'Alerte' in result:
+                  print('--- ECHEC : UNE FAILLE DE SECURITE A ETE DETECTEE ---')
+                  exit(1)
+              
+              print('--- SUCCES : AUCUNE FAILLE DETECTEE ---')
+          except Exception as e:
+              print(f'Erreur lors du scan : {e}')
               exit(1)
           "
