--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,14 @@
+version: '3.8'
+
 services:
   web:
     build: .
     ports:
       - "5000:5000"
+    # --- AJOUT DU VOLUME POUR LA BLUE TEAM ---
+    volumes:
+      - .:/app  # Lie le dossier actuel au dossier /app du conteneur
+    # -----------------------------------------
     environment:
       # On passe la variable a Python sans ecrire le secret ici
       - REDIS_PASSWORD=${REDIS_PASSWORD:-pass123} 
@@ -13,3 +19,11 @@ services:
     image: redis:alpine
     # On protege Redis avec la meme variable
     command: redis-server --requirepass ${REDIS_PASSWORD:-pass123}
+    # --- AJOUT DU VOLUME POUR REDIS ---
+    volumes:
+      - redis_data:/data
+    # ----------------------------------
+
+# Déclaration des volumes nommés
+volumes:
+  redis_data:
